[BugFix] adjust notice overflow issue

--- a/webServer/client/assets/scss/_notification.scss
+++ b/webServer/client/assets/scss/_notification.scss
@@ -1,4 +1,3 @@
-$notice-width: 350px;
 $notice-action-width: 120px;
 
 /**
@@ -10,7 +9,7 @@ $notice-action-width: 120px;
     position: fixed;
     top: -100px;
     right: 10px;
-    width: $notice-width;
+    width: 350px;
     height: 320px;
     transition: 0.4s;
     visibility: hidden;
@@ -60,8 +59,9 @@ $notice-action-width: 120px;
     .NoticeContent {
         @extend .baseFonts;
         height: 80px;
-        width: $notice-width;
+        width: 280px;
         font-size: 14px;
+        float: left;
         .NoticeMessage {
             position: relative;
             line-height: 20px;
@@ -70,7 +70,7 @@ $notice-action-width: 120px;
                 font-weight: bold;
             }
             .description {
-                height: 20px;
+                line-height: 15px;
                 color: $grey-600;
                 .emphasis {
                     font-size: 15px;
@@ -84,15 +84,15 @@ $notice-action-width: 120px;
                 right: 10px;
                 width: 120px;
                 text-align: right;
-                color: $grey-400;
-                font-size: 12px;
+                color: #777;
+                font-size: 10px;
                 font-weight: bold;
             }
         }
     }
     .NoticeAction {
-        width: $notice-width;
-        padding-top: 10px;
+        position: relative;
+        padding-top: 5px;
         .action {
             float: left;
             width: $notice-action-width;
